--- a/landing-pages/vscode/style.css
+++ b/landing-pages/vscode/style.css
@@ -174,6 +174,7 @@ nav a:not(.navbar--brand) {
 /* main */
 main {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .hero-text {
@@ -264,3 +265,6 @@ h1 {
   margin-right: auto;
   display: flex;
 }
+
+/* Second section */
+
