--- a/landing-pages/vscode/style.css
+++ b/landing-pages/vscode/style.css
@@ -272,14 +272,41 @@ h1 {
   width: 1240px;
   display: flex;
   margin: 100px auto 0 auto;
-  gap: 100px;
+  justify-content: space-between;
 }
 
 .copilot {
   width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  line-height: 1.6;
+}
+
+.copilot h2 {
+  margin-bottom: 20px;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  margin-top: 0;
+  line-height: 150%;
+  font-size: 30px;
+  color: #242424;
+}
+
+.copilot p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #475569;
+}
+
+.copilot a {
+  font-size: 16px;
+  font-weight: 500;
+  color: #005fb8;
 }
 
 .copilot-screenshot img {
-  height: 339px;
+  height: 375px;
   width: 720px;
+  margin-left: auto;
 }
